src/styles.css
/* CSS Reset from https: //www.joshwcomeau.com/css/custom-css-reset */

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
* {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Add accessible line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

/* End of CSS Reset */

:root {
  --main-background-color: #EFECE8;
  --list-card-color: #FAF9F5;
  --list-card-shadow: color-mix(in srgb, var(--list-card-color) 80%, black);
  --main-text-color: #2b2b2b;
  --icon-filter: invert(0);
  --border-color: #dddad6;
  --theme-name: light;

  --accent-color: #CD7E5C;

  --card-height: 375px;
  --card-width: 375px;
  --container-border-radius: 50px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --main-background-color: #262624;
    --list-card-color: #30302E;
    --list-card-shadow: color-mix(in srgb, var(--list-card-color) 95%, white);
    --main-text-color: #F9F8F6;
    --icon-filter: invert(1);
    --border-color: #5c5a56;
    --theme-name: dark;
  }
}

/* Center the dialog */
dialog {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

body {
  background-color: var(--main-background-color);
  color: var(--main-text-color);
}

header {
  display: flex;
  justify-content: center;
}

ul {
  padding: 0;
}

li {
  padding: 4px;
  list-style: none;
}

button {
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: none;
  color: var(--main-text-color);
}

input {
  color: var(--main-text-color);
}

.icon {
  filter: var(--icon-filter);
  cursor: pointer;
}

.create-list {
  display: flex;
  align-items: center;
  margin: 20px;
}

.create-list.icon {
  height: 40px;
}

.list-board {
  margin: 0px 40px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(var(--card-width), 1fr));
  gap: 20px;
}

.list-card {
  display: flex;
  flex-direction: column;
  gap: 12px;
  min-height: var(--card-height);
  width: var(--card-width);
  background-color: var(--list-card-color);
  box-shadow: 0.5px 0.5px 5px var(--list-card-shadow);
  border-radius: var(--container-border-radius);
  padding: 20px;
  align-self: start;
}

.list-header {
  display: flex;
  align-items: center;
  gap: 8px;
}

.delete-list.icon {
  padding: 8px;
  min-width: 42px;
}

.delete-list:hover {
  background-color: var(--main-background-color);
  border-radius: 100%;
}

.list-title {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.list-item {
  display: flex;
  align-items: center;
  gap: 8px;
}

.list-item:hover {
  background-color: var(--main-background-color);
  border-radius: var(--container-border-radius);
}

.list-item input {
  background: none;
  border: none;
}

.list-item input:focus {
  outline: none;
}

.text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

input.due-date {
  background-color: var(--list-card-color);
  border: 1px solid var(--border-color);
  border-radius: var(--container-border-radius);
  text-align: center;
  font-size: 0.8rem;
  cursor: pointer;
  user-select: none;
  width: 90px;
  padding: 4px 0;
}

.due-date::-webkit-calendar-picker-indicator {
  display: none;
  cursor: pointer;
}

.delete-list {
  top: 20px;
  right: 24px;
  margin-left: auto;
}

.todo-description {
  display: none;
}

.list-item.expanded .todo-description {
  display: block;
}

.delete-todo {
  opacity: 0;
  margin-left: -8px;
}

.delete-todo:hover {
  background-color: var(--list-card-color);
  border-radius: 100%;
}

.list-item:hover .delete-todo {
  opacity: 1;
}

.delete-todo.icon {
  padding: 6px;
  min-width: 34px;
}

.add-todo {
  display: flex;
  align-items: center;
  height: 40px;
  width: 130px;
  padding: 8px;
  cursor: pointer;
  white-space: nowrap;
  color: var(--accent-color);
}

.add-todo:hover {
  background-color: var(--main-background-color);
  border-radius: var(--container-border-radius);
}

.add-todo.icon {
  padding: 0;
  width: 30px;
  filter: none; /* Stay the same color in dark mode */
}

.is-complete {
  opacity: 0; /* Hide default checkbox */
}

.checkbox-container {
  display: flex;
}

.checkbox-icon {
  display: inline-block;
  width: 24px;
  height: 24px;
  background-image: url("assets/empty-circle.svg");
}

.is-complete + .checkbox-icon:hover {
  background-image: url("assets/check-circle.svg");
  filter: none; /* Stay the same color in dark mode */
}

.is-complete:checked + .checkbox-icon {
  background-image: url("assets/check-circle.svg");
  filter: none; /* Stay the same color in dark mode */
}

.todo-description {
  font-size: 0.85rem;
}

